<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sohu.live56.view.login.UnitLogin">


    <LinearLayout
        style="@style/login_input_area"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/unit_account_et"
            style="@style/style_login_et"
            android:drawableLeft="@mipmap/login_account"
            android:hint="@string/input_account" />

        <View
            style="@style/style_divide_line"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp" />

        <EditText
            android:id="@+id/unit_pwd_et"
            style="@style/style_login_et"
            android:drawableLeft="@mipmap/login_password"
            android:hint="@string/input_pwd" />
    </LinearLayout>


    <Button
        android:id="@+id/login_btn"
        style="@style/style_login_btn"
        android:layout_marginTop="80dp"
        android:text="@string/login" />

</LinearLayout>
