<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sohu.live56.view.login.PersonalSettingActivity">

    <include layout="@layout/personal_head_img_layout" />

    <LinearLayout
        style="@style/login_input_area"
        android:layout_marginTop="10dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/person_tel"
                style="@style/personal_text_title"
                android:text="@string/update_name" />

            <TextView
                android:id="@+id/person_tel_tv"
                style="@style/style_personal_text_r"
                android:layout_toRightOf="@id/person_tel" />

        </RelativeLayout>

        <VideoView style="@style/style_divide_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/person_info"
                style="@style/personal_text_title"
                android:text="@string/introduce" />

            <TextView
                android:id="@+id/person_info_tv"
                style="@style/style_personal_text_r"
                android:layout_toRightOf="@id/person_info" />

        </RelativeLayout>
    </LinearLayout>


   <Button
       android:id="@+id/person_save_btn"
       android:layout_marginTop="40dp"
       android:text="@string/save"
       style="@style/style_login_btn"/>
</LinearLayout>
